method change load to ajax

--- a/ladder.html
+++ b/ladder.html
@@ -11,230 +11,232 @@
 	<link rel="stylesheet" href="./style/ladder_style.css">
 </head>
 <body>
-	<div id="content">
-		<div class="col-xs-12 col-sm-7 text-center match-info">
-			<p class="col-xs-12 col-sm-3">Eight-finals</p>
-		</div>
-		<div class="col-xs-12 col-sm-7 bottom-main">	
-			<div class="col-xs-12 col-sm-6 col-lg-3 lader-box-wrapper">
-				<div class="ladder-box">
-					<div class="border-menu">
-					</div>
-					<table>
-						<tr>
-							<td>Team A</td>
-							<td></td>
-						</tr>
-						<tr>
-							<td>Team B</td>
-							<td></td>
-						</tr>
-					</table>
-				</div>
-				<div class="ladder-box">
-					<div class="border-menu">
-					</div>
-					<table>
-						<tr>
-							<td>Team A</td>
-							<td></td>
-						</tr>
-						<tr>
-							<td>Team B</td>
-							<td></td>
-						</tr>
-					</table>
-				</div>
-				<div class="ladder-box">
-					<div class="border-menu">
-					</div>
-					<table>
-						<tr>
-							<td>Team A</td>
-							<td></td>
-						</tr>
-						<tr>
-							<td>Team B</td>
-							<td></td>
-						</tr>
-					</table>
-				</div>
-				<div class="ladder-box">
-					<div class="border-menu">
-					</div>
-					<table>
-						<tr>
-							<td>Team A</td>
-							<td></td>
-						</tr>
-						<tr>
-							<td>Team B</td>
-							<td></td>
-						</tr>
-					</table>
-				</div>
-				<div class="ladder-box">
-					<div class="border-menu">
-					</div>
-					<table>
-						<tr>
-							<td>Team A</td>
-							<td></td>
-						</tr>
-						<tr>
-							<td>Team B</td>
-							<td></td>
-						</tr>
-					</table>
-				</div>
-				<div class="ladder-box">
-					<div class="border-menu">
-					</div>
-					<table>
-						<tr>
-							<td>Team A</td>
-							<td></td>
-						</tr>
-						<tr>
-							<td>Team B</td>
-							<td></td>
-						</tr>
-					</table>
-				</div>
-				<div class="ladder-box">
-					<div class="border-menu">
-					</div>
-					<table>
-						<tr>
-							<td>Team A</td>
-							<td></td>
-						</tr>
-						<tr>
-							<td>Team B</td>
-							<td></td>
-						</tr>
-					</table>
-				</div>
-				<div class="ladder-box">
-					<div class="border-menu">
-					</div>
-					<table>
-						<tr>
-							<td>Team A</td>
-							<td></td>
-						</tr>
-						<tr class="winner">
-							<td>Team B</td>
-							<td></td>
-						</tr>
-					</table>
-				</div>
+	<div id="content-wrapper">
+		<div id="content">
+			<div class="col-xs-12 col-sm-7 text-center match-info">
+				<p class="col-xs-12 col-sm-3">Eight-finals</p>
 			</div>
-			<p class="col-xs-12 col-sm-6 col-lg-3">Quater-finals</p>
-			<div class="col-xs-12 col-sm-6 col-lg-3 lader-box-wrapper">
-				<div class="ladder-box">
-					<div class="border-menu">
+			<div class="col-xs-12 col-sm-7 bottom-main">	
+				<div class="col-xs-12 col-sm-6 col-lg-3 lader-box-wrapper">
+					<div class="ladder-box">
+						<div class="border-menu">
+						</div>
+						<table>
+							<tr>
+								<td>Team A</td>
+								<td></td>
+							</tr>
+							<tr>
+								<td>Team B</td>
+								<td></td>
+							</tr>
+						</table>
 					</div>
-					<table>
-						<tr>
-							<td>Team A</td>
-							<td></td>
-						</tr>
-						<tr>
-							<td>Team B</td>
-							<td></td>
-						</tr>
-					</table>
+					<div class="ladder-box">
+						<div class="border-menu">
+						</div>
+						<table>
+							<tr>
+								<td>Team A</td>
+								<td></td>
+							</tr>
+							<tr>
+								<td>Team B</td>
+								<td></td>
+							</tr>
+						</table>
+					</div>
+					<div class="ladder-box">
+						<div class="border-menu">
+						</div>
+						<table>
+							<tr>
+								<td>Team A</td>
+								<td></td>
+							</tr>
+							<tr>
+								<td>Team B</td>
+								<td></td>
+							</tr>
+						</table>
+					</div>
+					<div class="ladder-box">
+						<div class="border-menu">
+						</div>
+						<table>
+							<tr>
+								<td>Team A</td>
+								<td></td>
+							</tr>
+							<tr>
+								<td>Team B</td>
+								<td></td>
+							</tr>
+						</table>
+					</div>
+					<div class="ladder-box">
+						<div class="border-menu">
+						</div>
+						<table>
+							<tr>
+								<td>Team A</td>
+								<td></td>
+							</tr>
+							<tr>
+								<td>Team B</td>
+								<td></td>
+							</tr>
+						</table>
+					</div>
+					<div class="ladder-box">
+						<div class="border-menu">
+						</div>
+						<table>
+							<tr>
+								<td>Team A</td>
+								<td></td>
+							</tr>
+							<tr>
+								<td>Team B</td>
+								<td></td>
+							</tr>
+						</table>
+					</div>
+					<div class="ladder-box">
+						<div class="border-menu">
+						</div>
+						<table>
+							<tr>
+								<td>Team A</td>
+								<td></td>
+							</tr>
+							<tr>
+								<td>Team B</td>
+								<td></td>
+							</tr>
+						</table>
+					</div>
+					<div class="ladder-box">
+						<div class="border-menu">
+						</div>
+						<table>
+							<tr>
+								<td>Team A</td>
+								<td></td>
+							</tr>
+							<tr class="winner">
+								<td>Team B</td>
+								<td></td>
+							</tr>
+						</table>
+					</div>
 				</div>
-				<div class="ladder-box">
-					<div class="border-menu">
+				<p class="col-xs-12 col-sm-6 col-lg-3">Quater-finals</p>
+				<div class="col-xs-12 col-sm-6 col-lg-3 lader-box-wrapper">
+					<div class="ladder-box">
+						<div class="border-menu">
+						</div>
+						<table>
+							<tr>
+								<td>Team A</td>
+								<td></td>
+							</tr>
+							<tr>
+								<td>Team B</td>
+								<td></td>
+							</tr>
+						</table>
 					</div>
-					<table>
-						<tr>
-							<td>Team A</td>
-							<td></td>
-						</tr>
-						<tr>
-							<td>Team B</td>
-							<td></td>
-						</tr>
-					</table>
+					<div class="ladder-box">
+						<div class="border-menu">
+						</div>
+						<table>
+							<tr>
+								<td>Team A</td>
+								<td></td>
+							</tr>
+							<tr>
+								<td>Team B</td>
+								<td></td>
+							</tr>
+						</table>
+					</div>
+					<div class="ladder-box">
+						<div class="border-menu">
+						</div>
+						<table>
+							<tr>
+								<td>Team A</td>
+								<td></td>
+							</tr>
+							<tr>
+								<td>Team B</td>
+								<td></td>
+							</tr>
+						</table>
+					</div>
+					<div class="ladder-box">
+						<div class="border-menu">
+						</div>
+						<table>
+							<tr>
+								<td>Team A</td>
+								<td></td>
+							</tr>
+							<tr class="winner">
+								<td>Team B</td>
+								<td></td>
+							</tr>
+						</table>
+					</div>
 				</div>
-				<div class="ladder-box">
-					<div class="border-menu">
+				<p class="col-xs-12 col-sm-7 col-lg-3">Semi-finals</p>
+				<div class="col-xs-12 col-sm-6 col-lg-3 lader-box-wrapper">
+					<div class="ladder-box">
+						<div class="border-menu">
+						</div>
+						<table>
+							<tr>
+								<td>Team A</td>
+								<td></td>
+							</tr>
+							<tr>
+								<td>Team B</td>
+								<td></td>
+							</tr>
+						</table>
 					</div>
-					<table>
-						<tr>
-							<td>Team A</td>
-							<td></td>
-						</tr>
-						<tr>
-							<td>Team B</td>
-							<td></td>
-						</tr>
-					</table>
+					<div class="ladder-box">
+						<div class="border-menu">
+						</div>
+						<table>
+							<tr>
+								<td>Team A</td>
+								<td></td>
+							</tr>
+							<tr class="winner">
+								<td>Team B</td>
+								<td></td>
+							</tr>
+						</table>
+					</div>
 				</div>
-				<div class="ladder-box">
-					<div class="border-menu">
+				<p class="col-xs-12 col-sm-6 col-lg-3">Final</p>
+				<div class="col-xs-12 col-sm-6 col-lg-3 lader-box-wrapper">
+					<div class="ladder-box">
+						<div class="border-menu">
+						</div>
+						<table>
+							<tr>
+								<td>Team A</td>
+								<td></td>
+							</tr>
+							<tr class="winner">
+								<td>Team B</td>
+								<td></td>
+							</tr>
+						</table>
 					</div>
-					<table>
-						<tr>
-							<td>Team A</td>
-							<td></td>
-						</tr>
-						<tr class="winner">
-							<td>Team B</td>
-							<td></td>
-						</tr>
-					</table>
-				</div>
-			</div>
-			<p class="col-xs-12 col-sm-7 col-lg-3">Semi-finals</p>
-			<div class="col-xs-12 col-sm-6 col-lg-3 lader-box-wrapper">
-				<div class="ladder-box">
-					<div class="border-menu">
-					</div>
-					<table>
-						<tr>
-							<td>Team A</td>
-							<td></td>
-						</tr>
-						<tr>
-							<td>Team B</td>
-							<td></td>
-						</tr>
-					</table>
-				</div>
-				<div class="ladder-box">
-					<div class="border-menu">
-					</div>
-					<table>
-						<tr>
-							<td>Team A</td>
-							<td></td>
-						</tr>
-						<tr class="winner">
-							<td>Team B</td>
-							<td></td>
-						</tr>
-					</table>
-				</div>
-			</div>
-			<p class="col-xs-12 col-sm-6 col-lg-3">Final</p>
-			<div class="col-xs-12 col-sm-6 col-lg-3 lader-box-wrapper">
-				<div class="ladder-box">
-					<div class="border-menu">
-					</div>
-					<table>
-						<tr>
-							<td>Team A</td>
-							<td></td>
-						</tr>
-						<tr class="winner">
-							<td>Team B</td>
-							<td></td>
-						</tr>
-					</table>
 				</div>
 			</div>
 		</div>
