--- a/teams.html
+++ b/teams.html
@@ -11,107 +11,109 @@
 	<link rel="stylesheet" href="./style/teams_style.css">
 </head>
 <body>
-	<div id="content">
-		<div class="col-xs-12 col-sm-7 match-info">
-			<p class="col-xs-12 text-center">212 Teams (118 checked in)</p>	
-		</div>
-		<div class="col-xs-12 col-sm-7 bottom-main">
-			<div class="col-xs-12 bottom-inner-wrapper">
-				<div class="col-xs-6 col-sm-4 col-md-3 team-box">
-					<div>
-						<img src="images/team-avatar.jpg" alt="team">
+	<div id="content-wrapper">
+		<div id="content">
+			<div class="col-xs-12 col-sm-7 match-info">
+				<p class="col-xs-12 text-center">212 Teams (118 checked in)</p>	
+			</div>
+			<div class="col-xs-12 col-sm-7 bottom-main">
+				<div class="col-xs-12 bottom-inner-wrapper">
+					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
+						<div>
+							<img src="images/team-avatar.jpg" alt="team">
+						</div>
+						<p class="text-center">team</p>
 					</div>
-					<p class="text-center">team</p>
-				</div>
-				<div class="col-xs-6 col-sm-4 col-md-3 team-box">
-					<div>
-						<img src="images/team-avatar.jpg" alt="team">
+					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
+						<div>
+							<img src="images/team-avatar.jpg" alt="team">
+						</div>
+						<p class="text-center">team</p>
 					</div>
-					<p class="text-center">team</p>
-				</div>
-				<div class="col-xs-6 col-sm-4 col-md-3 team-box">
-					<div>
-						<img src="images/team-avatar.jpg" alt="team">
+					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
+						<div>
+							<img src="images/team-avatar.jpg" alt="team">
+						</div>
+						<p class="text-center">team</p>
 					</div>
-					<p class="text-center">team</p>
-				</div>
-				<div class="col-xs-6 col-sm-4 col-md-3 team-box">
-					<div>
-						<img src="images/team-avatar.jpg" alt="team">
+					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
+						<div>
+							<img src="images/team-avatar.jpg" alt="team">
+						</div>
+						<p class="text-center">team</p>
 					</div>
-					<p class="text-center">team</p>
-				</div>
-				<div class="col-xs-6 col-sm-4 col-md-3 team-box">
-					<div>
-						<img src="images/team-avatar.jpg" alt="team">
+					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
+						<div>
+							<img src="images/team-avatar.jpg" alt="team">
+						</div>
+						<p class="text-center">team</p>
 					</div>
-					<p class="text-center">team</p>
-				</div>
-				<div class="col-xs-6 col-sm-4 col-md-3 team-box">
-					<div>
-						<img src="images/team-avatar.jpg" alt="team">
+					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
+						<div>
+							<img src="images/team-avatar.jpg" alt="team">
+						</div>
+						<p class="text-center">team</p>
 					</div>
-					<p class="text-center">team</p>
-				</div>
-				<div class="col-xs-6 col-sm-4 col-md-3 team-box">
-					<div>
-						<img src="images/team-avatar.jpg" alt="team">
+					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
+						<div>
+							<img src="images/team-avatar.jpg" alt="team">
+						</div>
+						<p class="text-center">team</p>
 					</div>
-					<p class="text-center">team</p>
-				</div>
-				<div class="col-xs-6 col-sm-4 col-md-3 team-box">
-					<div>
-						<img src="images/team-avatar.jpg" alt="team">
+					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
+						<div>
+							<img src="images/team-avatar.jpg" alt="team">
+						</div>
+						<p class="text-center">team</p>
 					</div>
-					<p class="text-center">team</p>
-				</div>
-				<div class="col-xs-6 col-sm-4 col-md-3 team-box">
-					<div>
-						<img src="images/team-avatar.jpg" alt="team">
+					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
+						<div>
+							<img src="images/team-avatar.jpg" alt="team">
+						</div>
+						<p class="text-center">team</p>
 					</div>
-					<p class="text-center">team</p>
-				</div>
-				<div class="col-xs-6 col-sm-4 col-md-3 team-box">
-					<div>
-						<img src="images/team-avatar.jpg" alt="team">
+					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
+						<div>
+							<img src="images/team-avatar.jpg" alt="team">
+						</div>
+						<p class="text-center">team</p>
 					</div>
-					<p class="text-center">team</p>
-				</div>
-				<div class="col-xs-6 col-sm-4 col-md-3 team-box">
-					<div>
-						<img src="images/team-avatar.jpg" alt="team">
+					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
+						<div>
+							<img src="images/team-avatar.jpg" alt="team">
+						</div>
+						<p class="text-center">team</p>
 					</div>
-					<p class="text-center">team</p>
-				</div>
-				<div class="col-xs-6 col-sm-4 col-md-3 team-box">
-					<div>
-						<img src="images/team-avatar.jpg" alt="team">
+					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
+						<div>
+							<img src="images/team-avatar.jpg" alt="team">
+						</div>
+						<p class="text-center">team</p>
 					</div>
-					<p class="text-center">team</p>
-				</div>
-				<div class="col-xs-6 col-sm-4 col-md-3 team-box">
-					<div>
-						<img src="images/team-avatar.jpg" alt="team">
+					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
+						<div>
+							<img src="images/team-avatar.jpg" alt="team">
+						</div>
+						<p class="text-center">team</p>
 					</div>
-					<p class="text-center">team</p>
-				</div>
-				<div class="col-xs-6 col-sm-4 col-md-3 team-box">
-					<div>
-						<img src="images/team-avatar.jpg" alt="team">
+					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
+						<div>
+							<img src="images/team-avatar.jpg" alt="team">
+						</div>
+						<p class="text-center">team</p>
 					</div>
-					<p class="text-center">team</p>
-				</div>
-				<div class="col-xs-6 col-sm-4 col-md-3 team-box">
-					<div>
-						<img src="images/team-avatar.jpg" alt="team">
+					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
+						<div>
+							<img src="images/team-avatar.jpg" alt="team">
+						</div>
+						<p class="text-center">team</p>
 					</div>
-					<p class="text-center">team</p>
-				</div>
-				<div class="col-xs-6 col-sm-4 col-md-3 team-box">
-					<div>
-						<img src="images/team-avatar.jpg" alt="team">
+					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
+						<div>
+							<img src="images/team-avatar.jpg" alt="team">
+						</div>
+						<p class="text-center">team</p>
 					</div>
-					<p class="text-center">team</p>
 				</div>
 			</div>
 		</div>
