--- a/rules.html
+++ b/rules.html
@@ -11,15 +11,17 @@
 	<link rel="stylesheet" href="./style/rules_style.css">
 </head>
 <body>
-	<div id="content">
-		<div class="col-xs-12 col-sm-7 match-info">
-			<p class="col-xs-12 col-sm-6 text-center"></p>		
-		</div>
-		<div class="col-xs-12 col-sm-7 bottom-main">
-			<div class="col-xs-12 bottom-inner-wrapper">
-				<div class="col-xs-12 text-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint maxime, pariatur blanditiis. Illum tenetur, delectus, corporis dolore totam sed harum odio maiores deleniti, eius veritatis blanditiis similique nam, molestiae quae.</div>
-				<div class="col-xs-12 text-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta ex, excepturi! Eaque dolore, quibusdam dignissimos minima inventore totam animi, dicta vitae sequi eius, quo nesciunt veniam sint praesentium nisi tempora?
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae repellendus aperiam qui aut, expedita modi. Voluptas ut quaerat, nesciunt neque dolore facilis quo nulla impedit recusandae error aliquam perferendis commodi.</div>
+	<div id="content-wrapper">
+		<div id="content">
+			<div class="col-xs-12 col-sm-7 match-info">
+				<p class="col-xs-12 col-sm-6 text-center"></p>		
+			</div>
+			<div class="col-xs-12 col-sm-7 bottom-main">
+				<div class="col-xs-12 bottom-inner-wrapper">
+					<div class="col-xs-12 text-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint maxime, pariatur blanditiis. Illum tenetur, delectus, corporis dolore totam sed harum odio maiores deleniti, eius veritatis blanditiis similique nam, molestiae quae.</div>
+					<div class="col-xs-12 text-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta ex, excepturi! Eaque dolore, quibusdam dignissimos minima inventore totam animi, dicta vitae sequi eius, quo nesciunt veniam sint praesentium nisi tempora?
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae repellendus aperiam qui aut, expedita modi. Voluptas ut quaerat, nesciunt neque dolore facilis quo nulla impedit recusandae error aliquam perferendis commodi.</div>
+				</div>
 			</div>
 		</div>
 	</div>
