--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,400italic,700italic,700,300italic&subset=latin,latin-ext'>
 	<link rel="stylesheet" href="./style/basic_style.css">
 	<link rel="stylesheet" href="./style/games_style.css">
+	<link rel="stylesheet" href="./style/ladder_style.css">
+	<link rel="stylesheet" href="./style/rules_style.css">
+	<link rel="stylesheet" href="./style/teams_style.css">
 </head>
 <body>
 <div class="container-fluid">
