--- a/ladder.html
+++ b/ladder.html
@@ -16,7 +16,7 @@
 			<div class="col-xs-12 col-sm-7 text-center match-info">
 				<p class="col-xs-12 col-sm-3">Eight-finals</p>
 			</div>
-			<div class="col-xs-12 col-sm-7 bottom-main">	
+			<div class="col-xs-12 col-sm-7 ladder-main">	
 				<div class="col-xs-12 col-sm-6 col-lg-3 lader-box-wrapper">
 					<div class="ladder-box">
 						<div class="border-menu">
