--- a/teams.html
+++ b/teams.html
@@ -16,8 +16,8 @@
 			<div class="col-xs-12 col-sm-7 match-info">
 				<p class="col-xs-12 text-center">212 Teams (118 checked in)</p>	
 			</div>
-			<div class="col-xs-12 col-sm-7 bottom-main">
-				<div class="col-xs-12 bottom-inner-wrapper">
+			<div class="col-xs-12 col-sm-7 team-main">
+				<div class="col-xs-12 team-inner-wrapper">
 					<div class="col-xs-6 col-sm-4 col-md-3 team-box">
 						<div>
 							<img src="images/team-avatar.jpg" alt="team">
