--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 								</div>
 							</div>
 							<form class="col-xs-12 bottom-inner-wrapper result" name="result">
-								<p class="col-xs-4 col-sm-3 col-md-offset-1">enter result</p>
+								<p class="col-xs-3 col-sm-3 col-md-offset-1">enter result</p>
 								<div class="col-xs-1 col-sm-2 result-wrapper left-input">
 									<ul class="result-inner-wrapper">
 										<li class="enter-result text-center">
@@ -178,7 +178,7 @@
 										</li>
 									</ul>
 								</div>
-								<div class="col-xs-4 col-sm-2 col-sm-offset-2 col-md-offset-1 result-wrapper right-input">
+								<div class="col-xs-4 col-xs-offset-2 col-sm-2 col-sm-offset-2 col-md-offset-1 result-wrapper right-input">
 									<ul class="result-inner-wrapper">
 										<li class="enter-result text-center">
 											<img src="images/enter-result.png" alt="enter-result">
@@ -194,8 +194,8 @@
 										</li>
 									</ul>	
 								</div>
-								<p class="col-xs-4 col-xs-pull-4 col-sm-3 col-sm-pull-3 col-md-2 col-md-offset-2 col-md-pull-5">rate match</p>
-								<div class="col-xs-3 col-xs-pull-4 col-sm-pull-3 col-md-3 col-md-pull-4 ratings-wrapper">
+								<p class="col-xs-4 col-xs-pull-3 col-sm-3 col-sm-pull-3 col-md-2 col-md-offset-2 col-md-pull-5">rate match</p>
+								<div class="col-xs-3 col-xs-pull-3 col-sm-pull-3 col-md-3 col-md-pull-4 ratings-wrapper">
 									<div class="ratings text-center">
 										<label for="rate1" class="col-xs-4"><input type="radio" name="rating" id="rate1"/><img src="images/rate-1.png" alt="rate-1"></label>
 										<label for="rate2" class="col-xs-4"><input type="radio" name="rating" id="rate2"/><img src="images/rate-2.png" alt="rate-2"></label>
