ladder titles center

--- a/ladder.html
+++ b/ladder.html
@@ -14,7 +14,7 @@
 	<div id="content-wrapper">
 		<div id="content">
 			<div class="col-xs-12 col-sm-7 text-center match-info">
-				<p class="col-xs-12 col-sm-3">Eight-finals</p>
+				<p class="col-xs-12 col-sm-6 col-lg-4 text-center">Eight-finals</p>
 			</div>
 			<div class="col-xs-12 col-sm-7 ladder-main">	
 				<div class="col-xs-12 col-sm-6 col-lg-3 lader-box-wrapper">
@@ -131,7 +131,7 @@
 						</table>
 					</div>
 				</div>
-				<p class="col-xs-12 col-sm-6 col-lg-3">Quater-finals</p>
+				<p class="col-xs-12 col-sm-6 col-lg-3 text-center">Quater-finals</p>
 				<div class="col-xs-12 col-sm-6 col-lg-3 lader-box-wrapper">
 					<div class="ladder-box">
 						<div class="border-menu">
@@ -190,7 +190,7 @@
 						</table>
 					</div>
 				</div>
-				<p class="col-xs-12 col-sm-7 col-lg-3">Semi-finals</p>
+				<p class="col-xs-12 col-sm-7 col-lg-3 text-center">Semi-finals</p>
 				<div class="col-xs-12 col-sm-6 col-lg-3 lader-box-wrapper">
 					<div class="ladder-box">
 						<div class="border-menu">
@@ -221,7 +221,7 @@
 						</table>
 					</div>
 				</div>
-				<p class="col-xs-12 col-sm-6 col-lg-3">Final</p>
+				<p class="col-xs-12 col-sm-6 col-lg-3 text-center">Final</p>
 				<div class="col-xs-12 col-sm-6 col-lg-3 lader-box-wrapper">
 					<div class="ladder-box">
 						<div class="border-menu">
