--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 					<a href="rules.html">
 						<img src="images/card.png">
 					</a>
-					<a href="rules.html">
+					<a href="support.html">
 						<img src="images/flag.png">
 					</a>
 				</nav>
@@ -404,7 +404,7 @@
 							</ul>
 						</div>
 						<form name="chat-message" id="chat-message" class="new-message">
-							<textarea name="user-message" form+="chat-message" class="col-xs-9 col-sm-12 col-lg-9"></textarea>
+							<textarea name="user-message" form="chat-message" class="col-xs-9 col-sm-12 col-lg-9"></textarea>
 							<input type="submit" name="submit-message" value="send" class="col-xs-2 col-xs-offset-1 col-sm-4 col-sm-offset-0 col-lg-2 col-lg-offset-1 text-center">
 						</form>
 					</div>
