configuration support links

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<link rel="stylesheet" href="./style/ladder_style.css">
 	<link rel="stylesheet" href="./style/rules_style.css">
 	<link rel="stylesheet" href="./style/teams_style.css">
+	<link rel="stylesheet" href="./style/support_style.css">
+
 </head>
 <body>
 <div class="container-fluid">
