--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
  	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>games</title>
+	<title>team choose</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
 	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,400italic,700italic,700,300italic&subset=latin,latin-ext'>
@@ -13,7 +13,6 @@
 	<link rel="stylesheet" href="./style/rules_style.css">
 	<link rel="stylesheet" href="./style/teams_style.css">
 	<link rel="stylesheet" href="./style/support_style.css">
-
 </head>
 <body>
 <div class="container-fluid">
@@ -113,10 +112,8 @@
 			</div>
 			<div class="row bottom-row">
 				<nav class="col-xs-12 col-sm-1 text-center profile-menu">
-					<a href="index.html" class="active">
-						<img src="images/cup-white.png">
-					</a>
-					<a href="rules.html">
+					<img src="images/cup-white.png">
+					<a href="indez.html" class="active">
 						<img src="images/info.png">
 					</a>
 					<a href="ladder.html">
@@ -125,7 +122,7 @@
 					<a href="teams.html">
 						<img src="images/friends-white.png">
 					</a>
-					<a href="rules.html">
+					<a href="index.html">
 						<img src="images/card.png">
 					</a>
 					<a href="support.html">
@@ -135,164 +132,13 @@
 				<div id="content-wrapper">
 					<div id="content">
 						<div class="col-xs-12 col-sm-7 match-info">
-							<p class="col-xs-12 col-sm-6 text-center">Match Id: 37854462</p>
-							<p class="col-xs-12 col-sm-6 text-center">Date: 23 Aug 2015, 16:45</p>	
+							<p class="col-xs-12 col-sm-6 text-center"></p>		
 						</div>
-						<div class="col-xs-12 col-sm-7 bottom-main">
-							<div class="col-xs-12 bottom-inner-wrapper">
-								<div class="col-xs-12 col-sm-5 col-md-3 col-md-offset-1 game-box left-box">
-									<div class="progress game-box-bar">
-										<span class="badge">70%</span>
-										<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%"></div>
-									</div>
-									<div>
-										<img src="images/player-avatar.jpg" alt="player" class="game-img">
-									</div>
-									<p class="col-xs-12 text-center">Team Glorious</p>
-								</div>
-								<div class="col-xs-12 col-sm-2 col-md-3 versus">vs.</div>
-								<div class="col-xs-12 col-sm-5 col-md-3 col-lg-2 game-box right-box">
-									<div class="progress game-box-bar">
-										<span class="badge">60%</span>
-										<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%"></div>
-									</div>
-									<div>
-										<img src="images/player-avatar.jpg" alt="player" class="game-img">
-									</div>
-									<p class="col-xs-12 text-center">Team Glorious</p>
-								</div>
-							</div>
-							<form class="col-xs-12 bottom-inner-wrapper result" name="result">
-								<p class="col-xs-3 col-sm-3 col-md-offset-1">enter result</p>
-								<div class="col-xs-1 col-sm-2 result-wrapper left-input">
-									<ul class="result-inner-wrapper">
-										<li class="enter-result text-center">
-											<img src="images/enter-result.png" alt="enter-result">
-										</li>
-										<li class="result-list text-center">
-											<input type="radio" name="result-1" id="result1"/>1
-										</li>
-										<li class="result-list text-center">
-											<input type="radio" name="result-2" id="result2"/>2
-										</li>
-										<li class="result-list text-center">
-											<input type="radio" name="result-3" id="result3"/>3	
-										</li>
-									</ul>
-								</div>
-								<div class="col-xs-4 col-xs-offset-2 col-sm-2 col-sm-offset-2 col-md-offset-1 result-wrapper right-input">
-									<ul class="result-inner-wrapper">
-										<li class="enter-result text-center">
-											<img src="images/enter-result.png" alt="enter-result">
-										</li>
-										<li class="result-list text-center">
-											<input type="radio" name="result-1" id="result1"/>1
-										</li>
-										<li class="result-list text-center">
-											<input type="radio" name="result-2" id="result2"/>2
-										</li>
-										<li class="result-list text-center">
-											<input type="radio" name="result-3" id="result3"/>3	
-										</li>
-									</ul>	
-								</div>
-								<p class="col-xs-4 col-xs-pull-3 col-sm-3 col-sm-pull-3 col-md-2 col-md-offset-2 col-md-pull-5">rate match</p>
-								<div class="col-xs-3 col-xs-pull-3 col-sm-pull-3 col-md-3 col-md-pull-4 ratings-wrapper">
-									<div class="ratings text-center">
-										<label for="rate1" class="col-xs-4"><input type="radio" name="rating" id="rate1"/><img src="images/rate-1.png" alt="rate-1"></label>
-										<label for="rate2" class="col-xs-4"><input type="radio" name="rating" id="rate2"/><img src="images/rate-2.png" alt="rate-2"></label>
-										<label for="rate3" class="col-xs-4"><input type="radio" name="rating" id="rate3"/><img src="images/rate-3.png" alt="rate-3"></label>
-									</div>
-									<input type="button" value="upload media" class="col-xs-11 text-center"/>
-									<input type="submit" value="send" class="col-xs-11 text-center"/>
-								</div>
-								<div class="col-xs-12 col-md-4 col-md-offset-8 report"><p>report match</p></div>
-							</form>
-							<div class="col-xs-12 bottom-inner-wrapper">
-								<div class="col-xs-12 col-lg-6 players-wrapper">
-									<div class="col-sm-6">
-										<div>
-											<img src="images/player-avatar.jpg" alt="player" class="game-img">
-										</div>
-										<p class="text-center">Player</p>
-									</div>
-									<div class="col-sm-6">
-										<div>
-											<img src="images/player-avatar.jpg" alt="player" class="game-img">
-										</div>
-										<p class="text-center">Player</p>
-									</div>
-								</div>
-								<div class="col-xs-12 col-lg-6 players-wrapper">
-									<div class="col-sm-6 players-right">
-										<div>
-											<img src="images/player-avatar.jpg" alt="player" class="game-img">
-										</div>
-										<p class="text-center">Player</p>
-									</div>
-									<div class="col-sm-6 players-right">
-										<div>
-											<img src="images/player-avatar.jpg" alt="player" class="game-img">
-										</div>
-										<p class="text-center">Player</p>
-									</div>
-								</div>
-								<div class="col-xs-12 col-lg-6 players-wrapper">
-									<div class="col-sm-6">
-										<div>
-											<img src="images/player-avatar.jpg" alt="player" class="game-img">
-										</div>
-										<p class="text-center">Player</p>
-									</div>
-									<div class="col-sm-6">
-										<div>
-											<img src="images/player-avatar.jpg" alt="player" class="game-img">
-										</div>
-										<p class="text-center">Player</p>
-									</div>
-								</div>
-								<div class="col-xs-12 col-lg-6 players-wrapper">
-									<div class="col-sm-6 players-right">
-										<div>
-											<img src="images/player-avatar.jpg" alt="player" class="game-img">
-										</div>
-										<p class="text-center">Player</p>
-									</div>
-									<div class="col-sm-6 players-right">
-										<div>
-											<img src="images/player-avatar.jpg" alt="player" class="game-img">
-										</div>
-										<p class="text-center">Player</p>
-									</div>
-								</div>
-								<div class="col-xs-12 col-lg-6 players-wrapper">
-									<div class="col-sm-6">
-										<div>
-											<img src="images/player-avatar.jpg" alt="player" class="game-img">
-										</div>
-										<p class="text-center">Player</p>
-									</div>
-									<div class="col-sm-6">
-										<div>
-											<img src="images/player-avatar.jpg" alt="player" class="game-img">
-										</div>
-										<p class="text-center">Player</p>
-									</div>
-								</div>
-								<div class="col-xs-12 col-lg-6 players-wrapper">
-									<div class="col-sm-6 players-right">
-										<div>
-											<img src="images/player-avatar.jpg" alt="player" class="game-img">
-										</div>
-										<p class="text-center">Player</p>
-									</div>
-									<div class="col-sm-6 players-right">
-										<div>
-											<img src="images/player-avatar.jpg" alt="player" class="game-img">
-										</div>
-										<p class="text-center">Player</p>
-									</div>
-								</div>
+						<div class="col-xs-12 col-sm-7 rules-main">
+							<div class="col-xs-12 rules-inner-wrapper">
+								<div class="col-xs-12 rules-text-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint maxime, pariatur blanditiis. Illum tenetur, delectus, corporis dolore totam sed harum odio maiores deleniti, eius veritatis blanditiis similique nam, molestiae quae.</div>
+								<div class="col-xs-12 rules-text-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta ex, excepturi! Eaque dolore, quibusdam dignissimos minima inventore totam animi, dicta vitae sequi eius, quo nesciunt veniam sint praesentium nisi tempora?
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae repellendus aperiam qui aut, expedita modi. Voluptas ut quaerat, nesciunt neque dolore facilis quo nulla impedit recusandae error aliquam perferendis commodi.</div>
 							</div>
 						</div>
 					</div>
