--- a/support.html
+++ b/support.html
@@ -16,9 +16,9 @@
 			<div class="col-xs-12 col-sm-7 match-info">
 				<p class="col-xs-12 col-sm-6 text-center"></p>		
 			</div>
-			<div class="col-xs-12 col-sm-7 rules-main">
-				<div class="col-xs-12 rules-inner-wrapper">
-					<div class="col-xs-12 text-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta ex, excepturi! Eaque dolore, quibusdam dignissimos minima inventore totam animi, dicta vitae sequi eius, quo nesciunt veniam sint praesentium nisi tempora?
+			<div class="col-xs-12 col-sm-7 support-main">
+				<div class="col-xs-12 support-inner-wrapper">
+					<div class="col-xs-12 support-text-box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta ex, excepturi! Eaque dolore, quibusdam dignissimos minima inventore totam animi, dicta vitae sequi eius, quo nesciunt veniam sint praesentium nisi tempora?
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae repellendus aperiam qui aut, expedita modi. Voluptas ut quaerat, nesciunt neque dolore facilis quo nulla impedit recusandae error aliquam perferendis commodi.
 					</div>
 					<form name="support" id="support" class="col-xs-12 topic-wrapper">
