--- a/ladder.html
+++ b/ladder.html
@@ -19,223 +19,253 @@
 			<div class="col-xs-12 col-sm-7 ladder-main">	
 				<div class="col-xs-12 col-sm-6 col-lg-3 lader-box-wrapper">
 					<div class="ladder-box">
-						<div class="border-menu">
-						</div>
-						<table>
-							<tr>
-								<td>Team A</td>
-								<td></td>
-							</tr>
-							<tr>
-								<td>Team B</td>
-								<td></td>
-							</tr>
-						</table>
+						<a href="team_card.html">
+							<div class="border-menu">
+							</div>
+							<table>
+								<tr>
+									<td>Team A</td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>Team B</td>
+									<td></td>
+								</tr>
+							</table>
+						</a>
 					</div>
 					<div class="ladder-box">
-						<div class="border-menu">
-						</div>
-						<table>
-							<tr>
-								<td>Team A</td>
-								<td></td>
-							</tr>
-							<tr>
-								<td>Team B</td>
-								<td></td>
-							</tr>
-						</table>
+						<a href="team_card.html">
+							<div class="border-menu">
+							</div>
+							<table>
+								<tr>
+									<td>Team A</td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>Team B</td>
+									<td></td>
+								</tr>
+							</table>
+						</a>
 					</div>
 					<div class="ladder-box">
-						<div class="border-menu">
-						</div>
-						<table>
-							<tr>
-								<td>Team A</td>
-								<td></td>
-							</tr>
-							<tr>
-								<td>Team B</td>
-								<td></td>
-							</tr>
-						</table>
+						<a href="team_card.html">
+							<div class="border-menu">
+							</div>
+							<table>
+								<tr>
+									<td>Team A</td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>Team B</td>
+									<td></td>
+								</tr>
+							</table>
+						</a>
 					</div>
 					<div class="ladder-box">
-						<div class="border-menu">
-						</div>
-						<table>
-							<tr>
-								<td>Team A</td>
-								<td></td>
-							</tr>
-							<tr>
-								<td>Team B</td>
-								<td></td>
-							</tr>
-						</table>
+						<a href="team_card.html">
+							<div class="border-menu">
+							</div>
+							<table>
+								<tr>
+									<td>Team A</td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>Team B</td>
+									<td></td>
+								</tr>
+							</table>
+						</a>
 					</div>
 					<div class="ladder-box">
-						<div class="border-menu">
-						</div>
-						<table>
-							<tr>
-								<td>Team A</td>
-								<td></td>
-							</tr>
-							<tr>
-								<td>Team B</td>
-								<td></td>
-							</tr>
-						</table>
+						<a href="team_card.html">
+							<div class="border-menu">
+							</div>
+							<table>
+								<tr>
+									<td>Team A</td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>Team B</td>
+									<td></td>
+								</tr>
+							</table>
+						</a>
 					</div>
 					<div class="ladder-box">
-						<div class="border-menu">
-						</div>
-						<table>
-							<tr>
-								<td>Team A</td>
-								<td></td>
-							</tr>
-							<tr>
-								<td>Team B</td>
-								<td></td>
-							</tr>
-						</table>
+						<a href="team_card.html">
+							<div class="border-menu">
+							</div>
+							<table>
+								<tr>
+									<td>Team A</td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>Team B</td>
+									<td></td>
+								</tr>
+							</table>
+						</a>
 					</div>
 					<div class="ladder-box">
-						<div class="border-menu">
-						</div>
-						<table>
-							<tr>
-								<td>Team A</td>
-								<td></td>
-							</tr>
-							<tr>
-								<td>Team B</td>
-								<td></td>
-							</tr>
-						</table>
+						<a href="team_card.html">
+							<div class="border-menu">
+							</div>
+							<table>
+								<tr>
+									<td>Team A</td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>Team B</td>
+									<td></td>
+								</tr>
+							</table>
+						</a>
 					</div>
 					<div class="ladder-box">
-						<div class="border-menu">
-						</div>
-						<table>
-							<tr>
-								<td>Team A</td>
-								<td></td>
-							</tr>
-							<tr class="winner">
-								<td>Team B</td>
-								<td></td>
-							</tr>
-						</table>
+						<a href="team_card.html">
+							<div class="border-menu">
+							</div>
+							<table>
+								<tr>
+									<td>Team A</td>
+									<td></td>
+								</tr>
+								<tr class="winner">
+									<td>Team B</td>
+									<td></td>
+								</tr>
+							</table>
+						</a>
 					</div>
 				</div>
 				<p class="col-xs-12 col-sm-6 col-lg-3 text-center">Quater-finals</p>
 				<div class="col-xs-12 col-sm-6 col-lg-3 lader-box-wrapper">
 					<div class="ladder-box">
-						<div class="border-menu">
-						</div>
-						<table>
-							<tr>
-								<td>Team A</td>
-								<td></td>
-							</tr>
-							<tr>
-								<td>Team B</td>
-								<td></td>
-							</tr>
-						</table>
+						<a href="team_card.html">
+							<div class="border-menu">
+							</div>
+							<table>
+								<tr>
+									<td>Team A</td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>Team B</td>
+									<td></td>
+								</tr>
+							</table>
+						</a>
 					</div>
 					<div class="ladder-box">
-						<div class="border-menu">
-						</div>
-						<table>
-							<tr>
-								<td>Team A</td>
-								<td></td>
-							</tr>
-							<tr>
-								<td>Team B</td>
-								<td></td>
-							</tr>
-						</table>
+						<a href="team_card.html">
+							<div class="border-menu">
+							</div>
+							<table>
+								<tr>
+									<td>Team A</td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>Team B</td>
+									<td></td>
+								</tr>
+							</table>
+						</a>
 					</div>
 					<div class="ladder-box">
-						<div class="border-menu">
-						</div>
-						<table>
-							<tr>
-								<td>Team A</td>
-								<td></td>
-							</tr>
-							<tr>
-								<td>Team B</td>
-								<td></td>
-							</tr>
-						</table>
+						<a href="team_card.html">
+							<div class="border-menu">
+							</div>
+							<table>
+								<tr>
+									<td>Team A</td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>Team B</td>
+									<td></td>
+								</tr>
+							</table>
+						</a>
 					</div>
 					<div class="ladder-box">
-						<div class="border-menu">
-						</div>
-						<table>
-							<tr>
-								<td>Team A</td>
-								<td></td>
-							</tr>
-							<tr class="winner">
-								<td>Team B</td>
-								<td></td>
-							</tr>
-						</table>
+						<a href="team_card.html">
+							<div class="border-menu">
+							</div>
+							<table>
+								<tr>
+									<td>Team A</td>
+									<td></td>
+								</tr>
+								<tr class="winner">
+									<td>Team B</td>
+									<td></td>
+								</tr>
+							</table>
+						</a>
 					</div>
 				</div>
 				<p class="col-xs-12 col-sm-7 col-lg-3 text-center">Semi-finals</p>
 				<div class="col-xs-12 col-sm-6 col-lg-3 lader-box-wrapper">
 					<div class="ladder-box">
-						<div class="border-menu">
-						</div>
-						<table>
-							<tr>
-								<td>Team A</td>
-								<td></td>
-							</tr>
-							<tr>
-								<td>Team B</td>
-								<td></td>
-							</tr>
-						</table>
+						<a href="team_card.html">
+							<div class="border-menu">
+							</div>
+							<table>
+								<tr>
+									<td>Team A</td>
+									<td></td>
+								</tr>
+								<tr>
+									<td>Team B</td>
+									<td></td>
+								</tr>
+							</table>
+						</a>
 					</div>
 					<div class="ladder-box">
-						<div class="border-menu">
-						</div>
-						<table>
-							<tr>
-								<td>Team A</td>
-								<td></td>
-							</tr>
-							<tr class="winner">
-								<td>Team B</td>
-								<td></td>
-							</tr>
-						</table>
+						<a href="team_card.html">
+							<div class="border-menu">
+							</div>
+							<table>
+								<tr>
+									<td>Team A</td>
+									<td></td>
+								</tr>
+								<tr class="winner">
+									<td>Team B</td>
+									<td></td>
+								</tr>
+							</table>
+						</a>
 					</div>
 				</div>
 				<p class="col-xs-12 col-sm-6 col-lg-3 text-center">Final</p>
 				<div class="col-xs-12 col-sm-6 col-lg-3 lader-box-wrapper">
 					<div class="ladder-box">
-						<div class="border-menu">
-						</div>
-						<table>
-							<tr>
-								<td>Team A</td>
-								<td></td>
-							</tr>
-							<tr class="winner">
-								<td>Team B</td>
-								<td></td>
-							</tr>
-						</table>
+						<a href="team_card.html">
+							<div class="border-menu">
+							</div>
+							<table>
+								<tr>
+									<td>Team A</td>
+									<td></td>
+								</tr>
+								<tr class="winner">
+									<td>Team B</td>
+									<td></td>
+								</tr>
+							</table>
+						</a>
 					</div>
 				</div>
 			</div>
