ladder delegation fix

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 			<div class="row bottom-row">
 				<nav class="col-xs-12 col-sm-1 text-center profile-menu">
 					<img src="images/cup-white.png">
-					<a href="indez.html" class="active">
+					<a href="index.html" class="active">
 						<img src="images/info.png">
 					</a>
 					<a href="ladder.html">
