--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
 							</ul>
 						</div>
 						<form name="chat-message" id="chat-message" class="new-message">
-							<textarea name="user-message" form="chat-message" class="col-xs-9 col-sm-12 col-lg-9"></textarea>
-							<input type="submit" name="submit-message" value="send" class="col-xs-2 col-xs-offset-1 col-sm-4 col-sm-offset-0 col-lg-2 col-lg-offset-1 text-center">
+							<textarea name="user-message" form="chat-message" class="col-xs-12 col-lg-9"></textarea>
+							<input type="submit" name="submit-message" value="send" class="col-xs-3 col-sm-4 col-sm-offset-0 col-lg-2 col-lg-offset-1 text-center">
 						</form>
 					</div>
 					<div class="col-xs-12 right-banner">
