--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
 								</li>
 							</ul>
 						</div>
-						<form name="chat-message" id="chat-message" class="new-message">
-							<textarea name="user-message" form="chat-message" class="col-xs-12 col-lg-9"></textarea>
+						<form name="chat-message" id="chatMessage" class="new-message">
+							<textarea name="user-message" form="chatMessage" class="col-xs-12 col-lg-9"></textarea>
 							<input type="submit" name="submit-message" value="send" class="col-xs-3 col-sm-4 col-sm-offset-0 col-lg-2 col-lg-offset-1 text-center">
 						</form>
 					</div>
