--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
 							</ul>
 						</div>
 						<form name="chat-message" id="chatMessage" class="new-message">
-							<textarea name="user-message" form="chatMessage" class="col-xs-12 col-lg-9"></textarea>
-							<input type="submit" name="submit-message" value="send" class="col-xs-3 col-sm-4 col-sm-offset-0 col-lg-2 col-lg-offset-1 text-center">
+							<textarea name="user-message" form="chatMessage" class="col-xs-12"></textarea>
+							<input type="submit" name="submit-message" value="send" class="col-xs-4 col-sm-5 text-center">
 						</form>
 					</div>
 					<div class="col-xs-12 right-banner">
